--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "animejs": "^3.1.7",
     "bootstrap": "^5.3.1",
     "bootstrap-reboot": "^4.5.6",
+    "chart.js": "^3.6.0",
+    "jwt-decode": "^3.1.2",
+    "ng2-charts": "^5.0.3",
     "ngx-infinite-scroll": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
